test_axe8.txt
cargo :    Compiling hft_bot v0.1.0 (C:\Users\jules\Documents\bot4\bot)
Au caractère Ligne:1 : 1
+ cargo test 2>&1 | Out-File -FilePath C:\Users\jules\Documents\bot4\te ...
+ ~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling hf...ments\bot4\bot):String) [],     RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `super::*`
   --> src\core\channels.rs:103:9
    |
103 |     use super::*;
    |         ^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Orderbook`
    --> src\core\execution.rs:1014:47
     |
1014 |     use crate::adapters::types::{OrderStatus, Orderbook};
     |                                               ^^^^^^^^^

warning: unused import: `AtomicU64`
    --> src\core\execution.rs:1015:29
     |
1015 |     use std::sync::atomic::{AtomicU64, Ordering};
     |                             ^^^^^^^^^

error[E0308]: mismatched types
   --> tests\full_cycle.rs:406:29
    |
406 |     assert_eq!(latest.pair, "BTC-PERP-4", "Watch should hold the latest (freshest) opportunity");
    |                             ^^^^^^^^^^^^ expected `Arc<str>`, found `&str`
    |
    = note: expected struct `Arc<str>`
            found reference `&str`
help: call `Into::into` on this expression to convert `&str` into `Arc<str>`
    |
406 |     assert_eq!(latest.pair, "BTC-PERP-4".into(), "Watch should hold the latest (freshest) opportunity");
    |                                         +++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `hft_bot` (test "full_cycle") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
warning: `hft_bot` (lib test) generated 3 warnings (run `cargo fix --lib -p hft_bot --tests` to apply 3 suggestions)
